finish part API documentation
